# modelLearning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  atom_shortcut.md  book.json
Book/: SUMMARY.md  function-train.md  optimizer.md
include/: FT.hpp
include/lib_base/: lib_base.hpp  polynome.hpp
include/lib_dyn/: def_system.hpp
include/lib_model/: lib_model.hpp  loss_function.hpp  model.hpp
include/lib_opti/: adadelta.hpp  adam.hpp  lib_opti.hpp
include/lib_repres/: FT.hpp  kernel_element.hpp  lib_repres.hpp  poly_element.hpp
plot/: histogram.gnu
prog/: CMakeLists.txt  default.json  learn_model.cpp  learn_rosenbrock.Cpp  rossler.json
prog/generate_data/: CMakeLists.txt  generate_lorenz.cpp  generate_lorenz9d.cpp  generate_rossler.cpp
src/: CMakeLists.txt  FT.cpp  polynome.cpp
src/lib_base/: CMakeLists.txt  polynome.cpp
src/lib_model/: CMakeLists.txt  model.cpp
src/lib_opti/: CMakeLists.txt  adadelta.cpp  adam.cpp
src/lib_repres/: CMakeLists.txt  FT.cpp  kernel_element.cpp  poly_element.cpp
test/: CMakeLists.txt  test_arma.cpp  test_polynome.cpp
